feat: Introduce dictionary management and AI generation
Refactors the application to incorporate an Admin Dashboard for managing dictionary entries. This includes adding functionality for adding, editing, deleting, and searching words.

Additionally, it renames the AI lookup service to `generateEntryData` and updates its prompt to focus on content generation for the admin panel, rather than direct user lookups.

Key changes:
- Renamed project and metadata to "Dictionary Manager".
- Added `id` field to `DictionaryEntry` type.
- Implemented local storage persistence for dictionary entries in `services/store.ts`.
- Created a new `AdminPanel` component for managing entries.
- Added `UserCog` icon for admin access.
- Modified `App.tsx` to integrate the admin panel and manage view states.
- Updated Gemini service prompt for AI-assisted content generation.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "borno-(বর্ণ)---ai-dictionary",
+  "name": "borno-(বর্ণ)---dictionary-manager",
   "private": true,
   "version": "0.0.0",
   "type": "module",
